@@ -1,5 +1,13 @@
 2009-06-27  Thomas Vander Stichele  <thomas at apestaart dot org>
 
+	* HACKING:
+	  Add note on setting PYTHONPATH for running tests.
+	* test/common.py:
+	  Also make trial work for Twisted 1.3.0 which we use for
+	  Python 2.3 testing.
+
+2009-06-27  Thomas Vander Stichele  <thomas at apestaart dot org>
+
 	* pychecker/CodeChecks.py:
 	  Add _empty and _unimplemented as opcode dispatchers.
 	  Add all missing opcodes for python 2.4
